# psd_multilayer_engine

./: CMakeLists.txt  README.md
.claude/: settings.local.json
docs/superpowers/specs/: 2026-04-21-psd-thumbnail-engine-design.md
src/: binary_reader.h  color_engine.cpp  color_engine.h  debug_channels.cpp  diag_resources.cpp  downscaler.cpp  downscaler.h  image_writer.cpp  image_writer.h  main.cpp  psd_parser.cpp  psd_parser.h  types.h
